--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,21 @@
-
-
 h2 {
     font-size: calc(1.3rem + 2.5vw)
 }
+
 nav {
     background: #23282e
 }
+
 .btn-toggle {
     background: none;
     color: white;
 }
 
 @media (min-width: 768px) {
-		
-	/* .nav-link:hover {
-		opacity: .8;
-	} */
+
+    /* .nav-link:hover {
+        opacity: .8;
+    } */
     .dropdown .dropdown-menu {
         display: block;
         visibility: hidden;
@@ -23,16 +23,21 @@ nav {
         opacity: 0;
         transition: all .2s;
     }
+
     .dropdown:hover .dropdown-menu {
         visibility: visible;
         opacity: 1;
     }
-    .navbar-dark .navbar-nav .nav-link:hover, .dropdown:hover .nav-link {
+
+    .navbar-dark .navbar-nav .nav-link:hover,
+    .dropdown:hover .nav-link {
         opacity: .8;
     }
+
     .nav-link {
         text-transform: uppercase;
     }
+
     .nav-item {
         margin-left: 10px;
         font-size: 1em
@@ -42,17 +47,15 @@ nav {
 
 .btn-login {
     padding: 10px 40px;
-    margin:  5px;
+    margin: 5px;
 }
+
 @media (max-width: 576px) {
     .btn-login {
         display: block
     }
+
     .btn-login {
         padding: 8px 20px;
     }
 }
-
-
-
-
