Refatoração de código

--- a/App/Views/dashboard/usuarios.phtml
+++ b/App/Views/dashboard/usuarios.phtml
@@ -8,7 +8,7 @@
     </thead>
     <tbody>
 
-        <?php foreach ($this->todosUsuarios as $key => $usuario) { ?>
+        <?php foreach ($usuarios as $key => $usuario) { ?>
             <tr>
                 <td>#<?= $usuario['id'] ?></td>
                 <td><?= $usuario['nome'] ?></td>
