--- a/App/Views/layout/layout.phtml
+++ b/App/Views/layout/layout.phtml
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
-    <title>Teste Dev - <?= ucfirst($action) ?></title>
+    <title>Teste Dev - <?= static::title($view) ?></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
@@ -18,44 +19,45 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg">
             <div class="container">
-                <h1><a href="/" class="navbar-brand">@<?= $_SESSION['nome'] ?></a></h1>
+                <h1><a href="/" class="navbar-brand">Teste Dev</a></h1>
                 <button type="button" class="d-block d-lg-none btn btn-toggle" data-toggle='collapse' data-target='#navbar-menu'>
-                    <i class="fas fa-bars fa-lg text-white"></i>
+                    <i class="fas fa-bars fa-lg"></i>
                 </button>
                 <div class="navbar-collapse collapse" id="navbar-menu">
                     <ul class="navbar-nav ml-auto">
-
                         <li class="nav-item">
-                            <a href="/" class="nav-link text-white">Inicio</a>
+                            <a href="/login" class="nav-link text-white">Entrar</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/dashboard" class="nav-link text-white">Dashboard</a>
+                            <a href="/registro" class="nav-link text-white ">Registrar-se</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/usuarios" class="nav-link text-white">Usuários</a>
+                            <a href="https://github.com/EdivandroLima" target="_blank" class="nav-link text-white"><i class="fab fa-github fa-sm"></i> Edivandro Lima</a>
                         </li>
-                        <li class="nav-item">
-                            <a href="/logout" class="btn btn-danger">Sair</a>
-                        </li>
-
                     </ul>
 
                 </div>
             </div>
         </nav>
     </header>
+
     <div class="container">
-
-        <?php require "../App/Views/Index/$action.phtml"; ?>
-
+        <!-- content -->
+        <?php require_once "../App/Views/$view.phtml"; ?>
     </div>
-
 
     <!-- JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script>
+        $('.btn-click').click(function() {
+            $(this).css('cursor', 'not-allowed').addClass('active')
+        })
+        $('input').keyup(function() {
+            $('.btn-click').css('cursor', 'pointer').removeClass('active')
+        })
+    </script>
 </body>
 
 </html>
